--- a/seckill-system-api/src/main/resources/static/css/detail.css
+++ b/seckill-system-api/src/main/resources/static/css/detail.css
@@ -51,22 +51,23 @@ div.detail-right-btn button {
 }
 
 .good-title {
-    height: 50px;
-    line-height: 50px;
+    height: 40px;
+    line-height: 40px;
     text-indent: 40px;
     font-size: 18px;
     font-family: monospace;
+    margin-top: 16px;
 }
 
 .good-price {
-    height: 50px;
+    height: 30px;
     padding-left: 40px;
-    line-height: 50px;
+    line-height: 30px;
 }
 
 .good-store {
-    line-height: 50px;
-    height: 50px;
+    line-height: 40px;
+    height: 40px;
     padding-left: 40px;
 }
 
