--- a/seckill-system-api/src/main/resources/templates/index.html
+++ b/seckill-system-api/src/main/resources/templates/index.html
@@ -1,19 +1,19 @@
 <! doctype html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head lang="zh-CN">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/8.0.1/normalize.css">
     <title>秒杀页面</title>
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="http://localhost:8088/css/index.css">
 </head>
 <body class="clear-float">
 <div class="top-nav">
     <div class="border">
         <div class="nav container">
             <div class="right">
-                <a href="">登录</a> |
-                <a href="">注册</a>
+                <span th:if="${status} eq 'unlogin'"><a href="/login.html">登录</a></span>
+                <span th:if="${status} eq 'unlogin'">|<a href="/register.html">注册</a></span>
             </div>
         </div>
     </div>
@@ -21,12 +21,10 @@
 <div class="header">
     <div class="container">
         <div class="left picture">
-            <img class="logo" src="../static/images/goods.jpg"/>
+            <img class="logo" src="http://localhost:8088/images/goods.jpg"/>
         </div>
         <div class="left classify">
-            <span>商品列表</span>
-            <span>摩托诺拉</span>
-            <span>华为</span>
+            <!--<span>商品列表</span>-->
         </div>
         <div class="right">
             <button id="click" style = "cursor: pointer">活动规则</button>
@@ -35,97 +33,27 @@
 </div>
 <div class="main-promote">
     <div class="container">
-        <div class="time">
-            <span>08:00 即将开始</span>
-            <span>10:00 即将开始</span>
-            <span>14:00 即将开始</span>
-            <span>20:00 即将开始</span>
-            <span>22:00 即将开始</span>
-        </div>
         <table>
             <tr>
-                <th>
+                <th th:each="activity:${activity}">
                     <div class="contain-left">
-                        <img src="../static/images/pms_1551344038.64534345.jpg"/>
+                        <img th:src="${activity.goods.goodsImg}"/>
                     </div>
                     <div class="contain-right">
                         <dl>
-                            <dt class="dt-1">手机摩托罗拉哈哈哈哈哈，你被骗了哈哈，真的太美丽动人了</dt>
-                            <dt class="dt-2">价格：100元</dt>
+                            <dt class="dt-1" th:text="${activity.goods.goodsTitle}"></dt>
+                            <dt class="dt-2">
+                                <span style = "color:red">
+                                   ￥<b>
+                                        <span th:text="${activity.seckillGoods.price}"></span>
+                                    </b>
+                                </span>
+                                &nbsp;&nbsp;
+                                <span th:text="${activity.goods.goodsPrice}" style = "text-decoration: line-through"></span>
+                            </dt>
+                            <dt class="dt-2">2020.08.21 10点~11点</dt>
                             <dd class="dd-1">
-                                <button style="">查看详情</button>
-                            </dd>
-                        </dl>
-                    </div>
-                </th>
-                <th>
-                    <div class="contain-left">
-                        <img src="../static/images/pms_1551344038.64534345.jpg"/>
-                    </div>
-                    <div class="contain-right">
-                        <dl>
-                            <dt class="dt-1">手机摩托罗拉哈哈哈哈哈，你被骗了哈哈，真的太美丽动人了</dt>
-                            <dt class="dt-2">价格：100元 <span style="text-decoration:line-through;">10000</span></dt>
-                            <dd class="dd-1">
-                                <button style="">查看详情</button>
-                            </dd>
-                        </dl>
-                    </div>
-                </th>
-                <th>
-                    <div class="contain-left">
-                        <img src="../static/images/pms_1551344038.64534345.jpg"/>
-                    </div>
-                    <div class="contain-right">
-                        <dl>
-                            <dt class="dt-1">手机摩托罗拉哈哈哈哈哈，你被骗了哈哈，真的太美丽动人了</dt>
-                            <dt class="dt-2">价格：100元</dt>
-                            <dd class="dd-1">
-                                <button style="">查看详情</button>
-                            </dd>
-                        </dl>
-                    </div>
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <div class="contain-left">
-                        <img src="../static/images/pms_1551344038.64534345.jpg"/>
-                    </div>
-                    <div class="contain-right">
-                        <dl>
-                            <dt class="dt-1">手机摩托罗拉哈哈哈哈哈，你被骗了哈哈，真的太美丽动人了</dt>
-                            <dt class="dt-2">价格：100元</dt>
-                            <dd class="dd-1">
-                                <button style="">查看详情</button>
-                            </dd>
-                        </dl>
-                    </div>
-                </th>
-                <th>
-                    <div class="contain-left">
-                        <img src="../static/images/pms_1551344038.64534345.jpg"/>
-                    </div>
-                    <div class="contain-right">
-                        <dl>
-                            <dt class="dt-1">手机摩托罗拉哈哈哈哈哈，你被骗了哈哈，真的太美丽动人了</dt>
-                            <dt class="dt-2">价格：100元</dt>
-                            <dd class="dd-1">
-                                <button style="">查看详情</button>
-                            </dd>
-                        </dl>
-                    </div>
-                </th>
-                <th>
-                    <div class="contain-left">
-                        <img src="../static/images/pms_1551344038.64534345.jpg"/>
-                    </div>
-                    <div class="contain-right">
-                        <dl>
-                            <dt class="dt-1">手机摩托罗拉哈哈哈哈哈，你被骗了哈哈，真的太美丽动人了</dt>
-                            <dt class="dt-2">价格：100元</dt>
-                            <dd class="dd-1">
-                                <button style="">查看详情</button>
+                                <button><a th:href="${status} eq 'unlogin'?'/login.html':'/goods_detail_url.html/'+${activity.seckillGoods.id}">查看详情</a></button>
                             </dd>
                         </dl>
                     </div>
